fix text-overflow

--- a/css/style.css
+++ b/css/style.css
@@ -96,19 +96,15 @@ header h1 {
     display: block;
 }
 
-.content .main .items .item h3,
+.content .main .items .item h3 a,
 .content .main .items .item p {
     padding-left: 8px;
-    display: -webkit-box;
-    max-height: 3.2rem;
-    -webkit-box-orient: vertical;
+    display: inline-block;
+    height: 1.2rem;
+    width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: normal;
-    -webkit-line-clamp: 2;
-    font-size: 1.4rem;
-    font-weight: 500;
-    line-height: 1.6rem;
+    white-space: nowrap;
 }
 
 .content .main .items .item p {
